[gd_scene load_steps=2 format=3 uid="uid://c0h6perk438yr"]

[ext_resource type="Script" path="res://scenes/ui/pause.gd" id="1_nhbox"]

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_nhbox")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 25

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Pause"

[node name="ButtonSettings" type="Button" parent="MarginContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonQuit" type="Button" parent="MarginContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/Panel/CenterContainer/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/CenterContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
